# clang_libraries_companion

slides/examples/: .gitignore
slides/examples/ast_visitor_1/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  demo  main.cpp
slides/examples/ast_visitor_3/: main.cpp
slides/examples/ast_visitor_matcher_1/: matcher.cpp  visitor0.cpp
slides/examples/command_line/: demo  main.cpp
slides/examples/command_line_0/: app  demo  main.cpp
slides/examples/compilation_database/: adjuster.cpp  compile_commands.json  demo  fixed.cpp  json.cpp
slides/examples/compilation_database/data/: fixed_compilation_database.txt
slides/examples/frontend_action_2/: demo  main.cpp
slides/examples/preprocessor/: demo
slides/examples/preprocessor/clang15/: main.cpp
slides/examples/preprocessor/clang16/: main.cpp
slides/examples/yibo_example11_ast_matcher_each_func_count_if/: CMakeLists.txt  main.cpp
slides/examples/yibo_example11_ast_matcher_each_func_count_if/data/: example_1.cpp
slides/examples/yibo_example12_template_lister/: CMakeLists.txt  main.cpp
slides/examples/yibo_example12_template_lister/data/: compile_commands.json  example_1.cpp
slides/examples/yibo_example13_max_nested_loop/: CMakeLists.txt  compile_commands.json  main.cpp
slides/examples/yibo_example13_max_nested_loop/data/: compile_commands.json  example_1.cpp
slides/examples/yibo_example14_print_public/: CMakeLists.txt  main.cpp
slides/examples/yibo_example14_print_public/data/: compile_commands.json  example_1.cpp
slides/examples/yibo_example15_decl_multiple_var/: CMakeLists.txt  main.cpp
slides/examples/yibo_example15_decl_multiple_var/data/: compile_commands.json  example_1.cpp
slides/examples/yibo_example1_json_pragma/: CMakeLists.txt  main.cpp
slides/examples/yibo_example1_json_pragma/data/: compile_commands.json  fake1.cpp  fake2.cpp  fake3.cpp
slides/examples/yibo_example2_print_Loc/: CMakeLists.txt  compile_commands.json  main.cpp
slides/examples/yibo_example3_Inclu_dir_nest/: CMakeLists.txt  main.cpp
slides/examples/yibo_example3_Inclu_dir_nest/data/: a.cpp  a.hpp  b.cpp  b.hpp  c.cpp  c.hpp  main.cpp
slides/examples/yibo_example4_var_decl_info/: CMakeLists.txt  compile_commands.json  main.cpp
slides/examples/yibo_example5_AccessSpecifier/: CMakeLists.txt  compile_commands.json  main.cpp
slides/examples/yibo_example5_AccessSpecifier/data/: File1.hpp  File2.hpp  File3.cpp  compile_commands.json
slides/examples/yibo_example6_attr_counter/: CMakeLists.txt  compile_commands.json  main.cpp
slides/examples/yibo_example6_attr_counter/data/: compile_commands.json  example_1.cpp
slides/examples/yibo_example8_unreach_stmt/: CMakeLists.txt  compile_commands.json  main.cpp  utilities.cpp  utilities.hpp
slides/examples/yibo_example8_unreach_stmt/data/: example_1.cpp
slides/examples/yibo_example9_dead_store/: CMakeLists.txt  compile_commands.json  main.cpp
slides/examples/yibo_example9_dead_store/data/: example_1.cpp
